update remove blog

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <div class="space">
                 <a class="active" href="index.html">HOME</a>
                 <div class="not-active">
-                    <a href="blog.html">BLOG</a>
                     <a href="resume.html">RESUME</a>
                     <a href="about.html">ABOUT</a>
                     <!--<a href="contact.html">CONTACT</a> -->
@@ -86,6 +85,14 @@
             </h2>
         </span>
         <div class="nyr">
+            <a target="_blank" href="https://www.computechblog.com/"><img src="images/computech.png" alt="The Computechblog website"></a>
+        </div>
+        <br/>
+        <p class = 'project_description'>
+            I created this blog to serve as a repository of information that I gain through my professional experience and my hobbies.
+        </p>
+        <hr>
+        <div class="nyr">
             <a target="_blank" href="https://www.sloppy2nd.com/"><img src="images/sloppy.jpg" alt="The Sloppy2nd Website"></a>
         </div>
         <br/>
@@ -101,6 +108,7 @@
             Sloppy2nd uses the gmail API to authenticate its users and you must have an @udel.edu email to register so if you would like a demo, please shoot me an <a href="mailto: agugger@udel.edu"><strong>email</strong></a>
             or reach out to me on <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><strong>linkedin</strong></a>.
         </p>
+        <hr>
         <div class="nyr">
             <a target="_blank" href="https://bafybeiem7f55i2h42ljd3bm62ypqg2abuh5gc2hfypvzc5hfkts5bnsrpy.ipfs.dweb.link/"><img src="images/NYR.png" alt="Andrew Gugger's New York Relic Project"></a>
         </div>
@@ -113,7 +121,7 @@
             bags of New York. After months of fulfilling orders, creating designs and utilizing social-media for guerilla marketing, we had to take the store down
             due to the shut down of our print providers and many other issues brought on by COVID-19. We are now hosting a simple landing page on IPFS using a .crypto domain.
         </p>   
-        <br/>
+        <hr>
         <br/>
         <h3>PGP Public Key</h3>
     </br>
