--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="me">
             <img src="images/profile7.jpg" alt="A profile pciture of Andrew Gugger."
              id="profile">
-            <a href="mailto: agugger@udel.edu"><img src="images/mail_icon.png" alt="Mail icon image that links to Andrew Gugger's email."
+            <a href="mailto: andrewgugger@gmail.com"><img src="images/mail_icon.png" alt="Mail icon image that links to Andrew Gugger's email."
             width=50 id="mailicon"></a>
             <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><img src="images/linked.png" alt="Linkedin icon image that links to Andrew Gugger's linkedin profile."
             width=50 id="linkedinicon"></a>
@@ -55,7 +55,7 @@
         <div class="animation">
             <div class="list">
                 <strong class="proficient">Proficient in:</strong>
-                <a href="" class="typewrite" data-period="2000" data-type='["Python", "Django", "C", "HTML/CSS", "SQL", "Excel", "Motorcycling"]'>
+                <a href="" class="typewrite" data-period="2000" data-type='["Python", "Django", "Kubernetes", "HTML/CSS", "SQL", "Docker", "Rock Climbing"]'>
                 <span class="wrap"></span>
                 </a>
             </div>
@@ -69,10 +69,9 @@
         Welcome to my website!
         </h2>
             <p>
-                Hi, my name is Andrew Gugger and I am a senior at the <a target="_blank" href="https://lerner.udel.edu"><strong>University of Delaware's Alfred
-                Lerner College of Business and Economics</strong></a>, pursuing a Bachelor of Science in Management Information Systems and am Minoring in Computer Science and Business 
-                Analytics. I look forward to exploring the many facets of IT and have interests in DBM design, web-development, and cybersecurity. I honed my positive 
-                work ethic while working on construction sites in Switzerland, and being on a collegiate rowing team as well as racing internationally has taught me the importance of teamwork. <a href="about.html"> <strong>Click here to learn more about me.</strong></a>
+                Hi, my name is Andrew Gugger and I am a programmer that is passionate about learning. I graduated from the <a target="_blank" href="https://lerner.udel.edu"><strong>University of Delaware's Alfred
+                Lerner College of Business and Economics</strong></a>, with a Bachelor of Science in Management Information Systems and Minors in Computer Science and Business 
+                Analytics. Check out my <a target="_blank" href="https://github.com/andrewgugger"><strong>Github</strong></a> to see some of my latest projects.<a href="about.html"> <strong>Click here to learn more about me.</strong></a>
             </p>
     </div>
 
