re-write homepage S2 and NYR

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
         </div>
         <br/>
         <p class = 'project_description'>
-            The average college student produces a whopping 640 pounds of trash annually, the majority of which accumulates at the end of the <a target="_blank" href="https://www.youtube.com/watch?v=sg465Igbxyw&t=205s"><strong>end of the year during move-out</strong></a>.
-            A large portion of this trash consists of items that have not reached their full life-span - stuff like microwaves, minifridges, textbooks, laptops, furniture, etc.
-            Furthermore, the turn-over time for moving into a dorm as a first-year student or even graduating and having to move out is so fast that it's not worth it for most 
-            people to list their housing amenities on traditional online marketplaces such as ebay or craigslist. I had the idea for <a target="_blank" href="https://www.sloppy2nd.com/"><strong>Sloppy2nd</strong></a> two years ago when I saw how 
-            many of the seniors on our team would resolve to throwing their stuff away or giving it to underclassmen on the team. Freshmen moving in would then buy all the
-            necessary amenities  brand new and the cycle would repeat. There needed to be a centralized website where only students at the University of Delaware could buy and sell their "Sloppy2nd" textbooks, 
-            microwaves, couches, etc. I built Sloppy2nd during the Summer of 2021 using the web-framework Django while simultaneously working a full time-internship as a front-end web developer.
-            The mission of Sloppy2nd is to help curb student waste while simultaneously lightening the financial load by giving students the opportunity to buy "sloppy2nds" from each other.
-            Sloppy2nd uses the gmail API to authenticate its users and you must have an @udel.edu email to register so if you would like a demo, please shoot me an <a href="mailto: agugger@udel.edu"><strong>email</strong></a>
-            or reach out to me on <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><strong>linkedin</strong></a>.
+            The average college student generates 640 pounds of waste annually, much of it during the <a target="_blank" href="https://www.youtube.com/watch?v=sg465Igbxyw&t=205s"><strong>end-of-year move-out</strong></a>. Many 
+            items—like microwaves, minifridges, textbooks, laptops, and furniture—are discarded long before their lifespan ends. This cycle continues as incoming students purchase new items to replace what others have discarded.
+            </br>
+            </br>
+            Realizing the inefficiency and environmental impact of this pattern, I created <a target="_blank" href="https://www.sloppy2nd.com/"><strong>Sloppy2nd</strong></a>  in Summer 2021 using Django while working full-time as 
+            a front-end web developer. Sloppy2nd is a centralized platform exclusively for University of Delaware students to buy and sell items like textbooks and dorm essentials.
+
+            To ensure security and community exclusivity, Sloppy2nd uses the Gmail API for user authentication, requiring a @udel.edu email to register. The platform’s mission is to reduce waste and alleviate financial burdens by promoting a circular economy among students.
+            </br>
+            If you’d like a demo, please reach out via <a href="mailto: andrewgugger@gmail.com"><strong>email</strong></a> or <a target ="_blank" href="https://www.linkedin.com/in/andrewgugger/"><strong>linkedin</strong></a>.
         </p>
         <hr>
         <div class="nyr">
@@ -117,7 +117,7 @@
             affects both our communities and environment. They can be seen stuck in trees, as litter in our neighborhoods, and floating in our waterways. My brothers
             and I started <a target="_blank" href="https://bafybeiem7f55i2h42ljd3bm62ypqg2abuh5gc2hfypvzc5hfkts5bnsrpy.ipfs.dweb.link/"><strong>New York Relic</strong></a> in 
             the wake of the ban with the mission to provide reusable carry bags inspired by the iconic designs found on the plastic 
-            bags of New York. After months of fulfilling orders, creating designs and utilizing social-media for guerilla marketing, we had to take the store down
+            bags of New York. After months of creating designs, utilizing social-media for guerilla marketing, and fulfilling orders, we had to take the store down
             due to the shut down of our print providers and many other issues brought on by COVID-19. We are now hosting a simple landing page on IPFS using a .crypto domain.
         </p>   
         <hr>
